Tweak styles to ensure correct spacing in main-section

--- a/pulse-style.css
+++ b/pulse-style.css
@@ -336,7 +336,7 @@ a, a:link, a:visited, a:hover, a:active {
 
 .main__container {
 	width: 100%;
-	height: 420px;
+	height: auto;
 
 	padding: 0 12.81%;
 
@@ -363,6 +363,7 @@ a, a:link, a:visited, a:hover, a:active {
   color: rgb(0, 0, 0);
   line-height: 1.5;
   text-align: left;
+  padding-bottom: 38px;
 
   -moz-transform: matrix( 1.01139332539771,0,0,1,0,0);
   -webkit-transform: matrix( 1.01139332539771,0,0,1,0,0);
